fixed the overflow bug

--- a/src/components/info-section/info-section.styles.scss
+++ b/src/components/info-section/info-section.styles.scss
@@ -18,6 +18,7 @@
             width: 300px;
             margin: auto;
             .top__image {
+                display: none;
                 position: absolute;
                 height: 500px;
                 width: 300px;
