--- a/src/components/landing-banner/landing-banner.styles.scss
+++ b/src/components/landing-banner/landing-banner.styles.scss
@@ -9,6 +9,7 @@
     }
     @media screen and (width: 768px) {
         height: 50vh;
+        padding-top: 80px;
     }
     @media screen and (width: 1024px) {
         height: 50vh;
@@ -118,9 +119,12 @@
                 @media screen and (max-width: 480px) {
                     width: 100vw;
                 }
+                @media screen and (max-width: 768px) {
+                    width: 100%;
+                }
                 img {
                     width: 100%;
-                    height: 100%;
+                    // height: 100%;
                 }
             }
         }
