--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
 * {
+    box-sizing: border-box;
+}
+
+body,
+html {
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
-}
-
-body {
     background-color: #10131d;
-    box-sizing: border-box;
 }
