--- a/src/pages/home-page/homepage.styles.scss
+++ b/src/pages/home-page/homepage.styles.scss
@@ -1,3 +1,3 @@
 .home__container {
-    box-sizing: border-box;
+    width: 100%;
 }
